Finished Home page, made dotted line corrections on About and fixed spacing.

--- a/css/index.css
+++ b/css/index.css
@@ -98,65 +98,42 @@ button {
 }
 
 .box1 {
-     width: 100px;
-    height: 100px;
-    padding: 30px;
     background-color: teal;
 }
 
 .box2 {
-     width: 100px;
-    height: 100px;
-    padding: 30px;
     background-color: gold;
 }
 
 .box3 {
-     width: 100px;
-    height: 100px;
-    padding: 30px;
     background-color: cadetblue;
 }
 
 .box4 {
-     width: 100px;
-  height: 100px;
     background-color: coral;
 }
 
 .box5 {
-     width: 100px;
-  height: 100px;
     background-color: crimson;
 }
 
 .box6 {
-     width: 100px;
-  height: 100px;
     background-color: forestgreen;
 }
 
 .box7 {
-     width: 100px;
-  height: 100px;
     background-color: darkorchid;
 }
 
 .box8 {
-     width: 100px;
-  height: 100px;
     background-color: hotpink;
 }
 
 .box9 {
-     width: 100px;
-  height: 100px;
     background-color: indigo;
 }
 
 .box10 {
-     width: 100px;
-  height: 100px;
     background-color: dodgerblue;
 }
 
@@ -196,13 +173,13 @@ button {
     justify-content: space-evenly;
     margin-bottom: 20px;
     padding-top: 30px;
+    border-bottom: 1px dashed black; 
 }
 
 .top-content .text-container {
     width: 48%;
     padding: 0 1%;
     padding-bottom: 20px; 
-    border-bottom: 1px dashed black; 
 }
 
 .middle-content-about {
@@ -210,12 +187,12 @@ button {
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin-bottom: 20px;
-    padding-top: 30px;
+    padding-top: .5%;
 }
 
 .middle-content-about .text-container {
     width: 48%;
-    padding: 0 1%;
+    padding: 1% 1%;
     padding-bottom: 20px; 
     border-bottom: 1px dashed black; 
 }
@@ -236,10 +213,9 @@ button {
     justify-content: space-evenly;
 }
 
-.middle-content .boxes .box {
+.box1, .box2, .box3, .box4, .box5, .box6, .box7, .box8, .box9, .box10 {
     width: 12.5%;
     height: 100px;
-    background: black;
     margin: 20px 2.5%;
     color: white;
     display: flex;
